# kscope

./: .gitignore  CMakeLists.txt  Makefile  README.md
lib/: CMakeLists.txt  ast.cpp  ast.h  common.h  emitter.cpp  emitter.h  executor.cpp  executor.h  lexer.cpp  lexer.h  parser.cpp  parser.h  runtime.cpp  runtime.h  std.cpp
src/: CMakeLists.txt  main.cpp
